# onnxruntime-v1.31.1

./: .clangd  .gitignore  .gitmodules  build_cuda.sh  build_in_docker.sh  build_rocm.sh  run_ortmodule_mvp_bert_finetuning.sh  setup.py  waston_a100.py
.github/workflows/: linux.yml
cmake/: CMakeLists.txt  Sdl.ruleset  adjust_global_compile_flags.cmake  onnxruntime.cmake  onnxruntime_config.h.in  onnxruntime_graph.cmake  onnxruntime_mlas.cmake  onnxruntime_optimizer.cmake  onnxruntime_providers.cmake  onnxruntime_python.cmake  onnxruntime_session.cmake  onnxruntime_training.cmake  onnxruntime_unittests.cmake  onnxruntime_webassembly.cmake  winml.cmake
csharp/: OnnxRuntime.CSharp.proj  UpgradeLog.htm
csharp/src/Microsoft.ML.OnnxRuntime/: InferenceSession.shared.cs  Microsoft.ML.OnnxRuntime.csproj  NativeMethods.shared.cs
csharp/test/Microsoft.ML.OnnxRuntime.EndToEndTests/: runtest.sh
csharp/test/Microsoft.ML.OnnxRuntime.Tests.Common/: InferenceTest.cs  Microsoft.ML.OnnxRuntime.Tests.Common.csproj
csharp/test/Microsoft.ML.OnnxRuntime.Tests.NetCoreApp/: InferenceTest.netcore.cs  Microsoft.ML.OnnxRuntime.Tests.NetCoreApp.csproj
dockerfiles/: Dockerfile.rocm
docs/: ContribOperators.md  OperatorKernels.md
docs/api/java/: index-all.html  member-search-index.js
docs/api/python/: searchindex.js  tutorial.html
exp/: mymodule.py  sample.py  test_interop.py  test_model.py  test_sample.py  train_with_interop.py
js/common/lib/: tensor-impl.ts  tensor.ts
js/react_native/: app.plugin.js
js/web/: BuildRun.py  package-lock.json
js/web/script/: prepack.ts
onnxruntime/: __init__.py
onnxruntime/contrib_ops/cpu/: cpu_contrib_kernels.cc
onnxruntime/contrib_ops/cuda/: cuda_contrib_kernels.cc  interop.cc  interop.h
onnxruntime/core/common/: threadpool.cc
onnxruntime/core/framework/: allocation_planner.cc  allocator.cc  bfc_arena.cc  execution_context.cc  execution_context.h  execution_frame.cc  fallback_cpu_capability.cc  func_kernel.h  graph_partitioner.cc  kernel_registry_manager.cc  kernel_registry_manager.h  onnxruntime_sequence_type_info.cc  op_kernel.cc  op_kernel_info.cc  op_node_proto_helper.cc  parallel_executor.cc  sequential_execution_plan.h  sequential_executor.cc  session_state.cc  session_state.h  tensor.cc  tensor_type_and_shape.cc  tensorprotoutils.cc  utils.cc
onnxruntime/core/graph/: graph.cc  model.h
onnxruntime/core/language_interop_ops/: language_interop_ops.cc
onnxruntime/core/optimizer/: constant_sharing.cc  constant_sharing.h  duplicate_dq_node.cc  duplicate_dq_node.h  fused_softmax_fusion.cc  fused_softmax_fusion.h  graph_transformer_utils.cc  matmul_add_fusion.cc  matmul_scale_fusion.cc  matmul_transpose_fusion.cc  nhwc_transformer.cc  nhwc_transformer.h  utils.cc  yield_io_rewriter.cc  yield_io_rewriter.h
onnxruntime/core/xnnpack/schema/: CMakeLists.txt  xnnpack_onnx_defs.cc  xnnpack_onnx_defs.h  xnnpack_onnx_schema.h  xnnpack_opset.h
onnxruntime/core/xnnpack/schema/tests/: main.cc
onnxruntime/python/: onnxruntime_inference_collection.py  onnxruntime_pybind_state.cc
onnxruntime/wasm/: api.cc
tools/ci_build/: build.py  coverage.py  requirements.txt  upload_python_package_to_azure_storage.py
tools/nuget/: generate_nuspec_for_native_nuget.py
(+289 files in other folders)
